release/v0.8.0/README.md
# Release v0.8.0

Det här är en ren release-mapp för aktuell print-and-play-version.

## Skriv ut från

### PDF (rekommenderas)
- `print/pdf/board-a4.pdf`
- `print/pdf/reference-card-a6.pdf`
- `print/pdf/reference-card-a4-4up.pdf`
- `print/pdf/fyndkort-a4-4x4.pdf`
- `print/pdf/hotkort-a4-4x4.pdf`

### SVG (master/export)
- `print/svg/board-a4.svg`
- `print/svg/reference-card-a6.svg`
- `print/svg/reference-card-a4-4up.svg`
- `print/svg/fyndkort-a4-4x4.svg`
- `print/svg/hotkort-a4-4x4.svg`

## Regel- och produktionsdokument

Se `docs/` i denna release-mapp för kopior av de viktigaste spelardokumenten.

## Källor

De verkliga projektkällorna ligger fortfarande i projektroten:

- `data/`
- `docs/`
- `scripts/`
- `assets/`

Ändra inte release-filer manuellt om samma ändring kan göras i källfilerna.
Regenerera i stället output och uppdatera release-mappen.

## Kortuppdatering i v0.8.0

- Fynd- och hotkort har fått en mer ink-friendly layout.
- Dekorativa cirklar längst ned är borttagna.
- Kortytan är huvudsakligen vit för lägre tonerförbrukning.
